# Desk-Watcher

./: .gitattributes  .gitignore  CLAUDE-CONTEXT.md  LICENSE  README.md  deployment-status.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
backend/: api.py  api_entry.py  classifier.py  config.py  database.py  download_models.py  phone_detector.py  requirements-dev.txt  requirements.txt  status.py  watcher.py
backend/models/: activity_classifier.pkl
backend/tests/: _test_safety_default.db  conftest.py  test_absences.py  test_api_endpoints.py  test_classifier_geometry.py  test_classifier_predict.py  test_label_data.py  test_status.py  test_timeline_merge.py  test_timezone_helpers.py  test_utils.py
docs/: packaging-plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  refutations.ts  types.ts  vite-env.d.ts
frontend/src/components/: Panel.tsx  Settings.tsx  Tier2Panels.tsx  TileGrid.tsx  TilePicker.tsx  Tiles.tsx  WorkHoursSelect.tsx
frontend/src/hooks/: useRefutations.ts  useWorkHours.ts
frontend/src/lib/: tauri.ts
frontend/src/metrics/: catalog.ts
ml/: README.md  collect_data.py  label_data.py  train.py
packaging/: api.spec  build.ps1  build.sh  requirements-build.txt  watcher.spec
scripts/: cleanup_absence.py
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
site/api/: download.js
site/scripts/: sync-screenshots.mjs
site/src/components/: DownloadButtons.astro  Footer.astro  Header.astro  SectionFrame.astro
site/src/layouts/: Base.astro
site/src/pages/: index.astro  privacy.astro
site/src/styles/: global.css
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs
